# assignment_3_2_GRJ

./: .pre-commit-config.yaml  CHANGELOG.md  noxfile.py  pyproject.toml
.github/workflows/: unc_package.yml
src/unc/: __init__.py
tests/: test_stdunc.py
